@@ -228,6 +228,7 @@ o Remove legacy OEM Dell commands moved to Inventec
   - set-sol-inactivity-timeout
 o Remove legacy OEM Dell command options / keys
   - "product-name" key for get-system-info command (use "platform-model-name")
+  - "slot-number" key for get-system-info command (use "blade-slot-info")
 o Remove legacy OEM Inventec commands
   - get-nic-status (use get-nic-mode)
   - set-nic-status (use set-nic-mode)
